src/components/Dropdown/style.css
.Dropdown {
  font-size: 13px;
  color: #777;
  position: relative;
  padding-top: 0;
  padding-bottom: 0;
  padding-right: 22px;
  padding-left: 16px;
  line-height: 22px;
  cursor: pointer;
}

.Dropdown__value {
  font-weight: bold;
}

.Dropdown__value:after {
  content: '';
  margin-left: 4px;
  display: inline-block;
  width: 0;
  height: 0;
  vertical-align: middle;
  border-color: #909090 transparent;
  border-style: solid;
  border-width: 5px 4px 0 4px;
}

.Dropdown__value_is_default {
  font-weight: normal;
}

.Dropdown__value:hover {
  color: #222;
}

.Dropdown__value:hover:after {
  border-color: #222 transparent;
}

.Dropdown__value:active {
  color: #4285f4;
}

.Dropdown__value:active:after {
  border-color: #4285f4 transparent;
}

.Dropdown__items {
  display: none;
  position: absolute;
  top: 100%;
  left: -15px;
  background: #fff;
  border: 1px solid #d6d6d6;
  box-shadow: 0 2px 4px rgba(0,0,0,.16);
  box-shadow: 0 2px 4px rgba(0,0,0,.16);
  color: #777;
  line-height: 17px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.Dropdown_is_opened .Dropdown__items {
  display: block;
}

.DropdownItem {
  text-decoration: none;
  padding: 6px 44px 6px 30px;
  line-height: 17px;
  display: block;
}

.DropdownItem:hover {
  background-color: #f1f1f1;
}

.DropdownItem_is_active {
  background-image: url('./checkmark.png');
  background-repeat: no-repeat;
  background-position: left center;
}

